# one-to-one-omok

./: .gitignore  CMakeLists.txt  OneToOneOmok.sln  README.md
Client/: CMakeLists.txt  CheckerBoard.c  CheckerBoard.h  Client.vcxproj  Client.vcxproj.filters  main.c
Common/: CMakeLists.txt  lib.c  network.c
Common/include/: common.h  lib.h  network.h  packet.h
Server/: CMakeLists.txt  Server.vcxproj  main.c
